--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6843,6 +6843,10 @@ input:checked + .toggle-bg {
         font-size: 20px;
         line-height: 1.5rem;
     }
+    .lg\:text-sm43 {
+        font-size: 10px;
+        line-height: 1.5rem;
+    }
     .sm\:ring-8 {
         --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0
             var(--tw-ring-offset-width) var(--tw-ring-offset-color);
