--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1241,6 +1241,9 @@ input:checked + .toggle-bg {
 .z-50 {
     z-index: 50;
 }
+.z-70 {
+    z-index: 70;
+}
 .col-span-1 {
     grid-column: span 1 / span 1;
 }
