--- a/public/css/output.css
+++ b/public/css/output.css
@@ -817,6 +817,41 @@ video {
         line-height: 1.5; /* Jarak antara baris teks */
         font-weight: 600;
     }
+    .avatar {
+        width: 20px;
+        height: 20px;
+        overflow: hidden;
+        border-radius: 50%;
+        position: relative;
+        background-color: #2c303a;
+        border: 2px solid #2c303a;
+    }
+
+    .avatar img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    .avatar-group {
+        margin-top: 30px;
+        display: flex;
+        justify-content: center;
+    }
+
+    .avatar-group.rtl {
+        flex-direction: row-reverse;
+    }
+
+    .avatar-group .avatar {
+        margin-left: -20px;
+        transition: transform 0.3s ease;
+        cursor: pointer;
+    }
+
+    .avatar-group .avatar:hover:not(:last-of-type) {
+        transform: translateX(-10px);
+    }
 }
 
 .content-section {
@@ -825,4 +860,39 @@ video {
 
 .content-section.active {
     display: block;
+}
+.avatar {
+    width: 55px;
+    height: 55px;
+    overflow: hidden;
+    border-radius: 50%;
+    position: relative;
+    background-color: #2c303a;
+    border: 2px solid #2c303a;
+}
+
+.avatar img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.avatar-group {
+    margin-top: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.avatar-group.rtl {
+    flex-direction: row-reverse;
+}
+
+.avatar-group .avatar {
+    margin-left: -20px;
+    transition: transform 0.3s ease;
+    cursor: pointer;
+}
+
+.avatar-group .avatar:hover:not(:last-of-type) {
+    transform: translateX(-10px);
 }
