update: style home fix

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -6716,6 +6716,9 @@ input:checked + .toggle-bg {
     .sm\:items-center {
         align-items: center;
     }
+    .sm\:items-left {
+        align-items: left;
+    }
     .sm\:justify-center {
         justify-content: center;
     }
