--- a/public/css/output.css
+++ b/public/css/output.css
@@ -852,6 +852,9 @@ video {
     .avatar-group .avatar:hover:not(:last-of-type) {
         transform: translateX(-10px);
     }
+    .testiRoad {
+        align-items: left !important;
+    }
 }
 /* 
 .content-section {
@@ -922,7 +925,41 @@ video {
         transform: translateY(0);
     }
 }
-
 .item {
     animation: scrollDown 3s ease-out infinite;
+}
+.testi {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.testimoni {
+    width: 35px;
+    height: 35px;
+    border-radius: 50%;
+    border: 1px solid white;
+    display: inline-block;
+    position: relative;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2);
+    -webkit-transition: 0.2s ease;
+    transition: 0.2s ease;
+    background-size: cover; /* Menyesuaikan ukuran gambar */
+    background-position: center; /* Posisikan gambar di tengah */
+    background-repeat: no-repeat; /* Jangan ulangi gambar */
+}
+
+.testimoni:nth-child(1) {
+    background-image: url("/images/inspirasi/inspirasi1.jpg");
+}
+.testimoni:nth-child(2) {
+    background-image: url("/images/inspirasi/inspirasi1.jpg");
+}
+.testimoni:nth-child(3) {
+    background-image: url("/images/inspirasi/inspirasi1.jpg");
+}
+.testimoni:nth-child(4) {
+    background-image: url("/images/inspirasi/inspirasi1.jpg");
+}
+.testimoni:nth-child(n + 2) {
+    margin-left: -20px;
 }
