--- a/public/css/output.css
+++ b/public/css/output.css
@@ -817,6 +817,9 @@ video {
     .faqw {
         width: 600px !important;
     }
+    .natr {
+        padding-left: 20px;
+    }
 }
 
 @media (max-width: 1025px) {
