--- a/public/css/index.css
+++ b/public/css/index.css
@@ -5830,6 +5830,9 @@ input:checked + .toggle-bg {
     --tw-bg-opacity: 1;
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+:is(.dark .dark\:bg-black) {
+    background-color: #18181a;
+}
 :is(.dark .dark\:bg-yellow-300) {
     --tw-bg-opacity: 1;
     background-color: rgb(250 202 21 / var(--tw-bg-opacity));
