--- a/public/css/output.css
+++ b/public/css/output.css
@@ -987,3 +987,31 @@ video {
     background-position: center; /* Posisikan gambar di tengah */
     background-repeat: no-repeat; /* Jangan ulangi gambar */
 }
+.slide-out {
+    animation: slideOut 0.3s forwards;
+}
+
+.slide-in {
+    animation: slideIn 0.3s forwards;
+}
+
+@keyframes slideOut {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes slideIn {
+    from {
+        transform: translateX(-100%);
+    }
+    to {
+        transform: translateX(0);
+    }
+}
+.hidden {
+    display: none;
+}
