--- a/public/css/output.css
+++ b/public/css/output.css
@@ -821,16 +821,27 @@ video {
         padding-left: 20px;
     }
     .contentSection {
-        padding: 30px 120px 50px 120px;
+        padding: 30px 120px 50px 90px;
     }
     #sidebar {
         width: 20rem;
-        border-right: 1px;
         position: sticky;
         top: 0px;
         height: 100vh;
         z-index: 20;
         overflow-y: auto;
+    }
+    .footer {
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        z-index: 50;
+        display: grid;
+        width: 100%;
+        height: 5rem;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        padding-left: 2rem;
+        padding-right: 2rem;
     }
 }
 
@@ -896,6 +907,14 @@ video {
         z-index: 30;
         height: auto;
         margin-top: 97px;
+    }
+    .footer {
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        z-index: 50;
+        width: 100%;
+        height: 5rem;
     }
 }
 /* 
