--- a/public/css/output.css
+++ b/public/css/output.css
@@ -924,6 +924,12 @@ video {
         width: 100%;
         height: 5rem;
     }
+    div .loginCard {
+        width: 100%;
+        height: 100%;
+        padding: 30px;
+        margin-top: 70px;
+    }
 }
 /* 
 .content-section {
