--- a/public/css/output.css
+++ b/public/css/output.css
@@ -788,21 +788,6 @@ video {
 @media (min-width: 1025px) {
     .bottom-bar {
         display: none;
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        background-color: #fff;
-        border-top: 1px solid #ccc;
-        z-index: 999;
-    }
-
-    .bottom-bar .text-lg {
-        margin-left: 1rem;
-    }
-
-    .bottom-bar button {
-        margin-right: 1rem;
     }
     .checklist-text {
         font-size: 30px; /* Ukuran teks checklist */
@@ -854,6 +839,9 @@ video {
 }
 
 @media (max-width: 1025px) {
+    .desktop {
+        display: none;
+    }
     .checklist-text {
         font-size: 17px; /* Ukuran teks checklist */
         line-height: 1.5; /* Jarak antara baris teks */
@@ -928,7 +916,55 @@ video {
         width: 100%;
         height: 100%;
         padding: 30px;
-        margin-top: 70px;
+    }
+    .buttonAction {
+        z-index: 50;
+        position: fixed;
+        bottom: 0px;
+        left: 0px;
+        width: 100%;
+        height: 80px;
+    }
+    .buttonAction2 {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-top: 0.75rem;
+        padding-bottom: 0.75rem;
+        margin-top: 0.5rem;
+    }
+
+    #checkout-button {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+        font-weight: 600;
+        border-radius: 100%;
+        margin-right: 1rem;
+        border-radius: 50px;
+        flex-shrink: 0;
+    }
+    #success-link {
+        padding-left: 1rem;
+        padding-right: 1rem;
+        padding-top: 0.5rem;
+        padding-bottom: 0.5rem;
+        font-weight: 600;
+        border-radius: 100%;
+        margin-right: 1rem;
+        border-radius: 50px;
+        flex-shrink: 0;
+    }
+
+    .buttonAction .text-lg {
+        margin-left: 1rem;
+    }
+
+    .buttonAction button {
+        margin-right: 1rem;
     }
 }
 /* 
