--- a/public/css/output.css
+++ b/public/css/output.css
@@ -832,9 +832,16 @@ video {
         width: 700px;
         padding: 120px;
     }
+    div .daftarCard {
+        width: 700px;
+        padding: 120px;
+    }
     .backgroundLogin {
         width: 1070px;
         height: 990px;
+    }
+    .bg-logdaf {
+        background-image: url("/images/loginBackground.png");
     }
 }
 
@@ -917,6 +924,12 @@ video {
         height: 100%;
         padding: 30px;
     }
+    div .daftarCard {
+        margin-top: 90px;
+        width: 100%;
+        height: 100%;
+        padding: 30px;
+    }
     .buttonAction {
         z-index: 50;
         position: fixed;
@@ -965,6 +978,9 @@ video {
 
     .buttonAction button {
         margin-right: 1rem;
+    }
+    .bg-logdaf {
+        background-color: white;
     }
 }
 /* 
