--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1020,15 +1020,8 @@ video {
     background-color: #2c303a;
     border: 2px solid #2c303a;
 }
-#cropperModal {
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparan hitam */
-}
-
-#cropperModal .modal-content {
-    background-color: white;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+#profilePhotoInput {
+    display: none;
 }
 
 .avatar img {
