--- a/public/css/output.css
+++ b/public/css/output.css
@@ -856,6 +856,10 @@ video {
         width: 500px;
         height: auto;
     }
+    .cardPhoto {
+        width: 30%;
+        height: 100%h;
+    }
 }
 
 @media (max-width: 1025px) {
@@ -1020,6 +1024,14 @@ video {
     background-color: #2c303a;
     border: 2px solid #2c303a;
 }
+.cropper-view-box {
+    border-radius: 50%;
+}
+
+.cropper-crop-box {
+    border-radius: 50%;
+}
+
 #cropperModal {
     background: rgba(0, 0, 0, 0.5); /* Semi-transparan hitam */
 }
