feat: avatar list for user

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1031,7 +1031,6 @@ video {
 .cropper-crop-box {
     border-radius: 50%;
 }
-
 #cropperModal {
     background: rgba(0, 0, 0, 0.5); /* Semi-transparan hitam */
 }
@@ -1071,6 +1070,9 @@ video {
 
 .avatar-group .avatar:hover:not(:last-of-type) {
     transform: translateX(-10px);
+}
+#avatarPopup {
+    background-color: rgb(0, 0, 0, 0.5);
 }
 .carousel-container {
     position: relative;
