--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1265,3 +1265,15 @@ video {
 .chat-you {
     border-radius: 15px 0px 15px 15px !important;
 }
+.dropdown::-webkit-scrollbar {
+    width: 8px; /* Width of the scrollbar */
+}
+
+.dropdown::-webkit-scrollbar-thumb {
+    background-color: #cbd5e1; /* Color of the scrollbar */
+    border-radius: 10px; /* Rounded corners of the scrollbar */
+}
+
+.dropdown::-webkit-scrollbar-track {
+    background-color: #f3f4f6; /* Background of the scrollbar track */
+}
