update: new section at quiz

--- a/public/css/output.css
+++ b/public/css/output.css
@@ -1278,5 +1278,5 @@ video {
     background-color: #f3f4f6; /* Background of the scrollbar track */
 }
 .border-active {
-    border: 1px solid #e5e7eb;
+    border: 1px solid #374151;
 }
